# animated-wallpaper

./: CMakeLists.txt  README.md  default.nix
src/: Main.vala  Playable.vala
